error-pages-middleware.yaml
---
apiVersion: traefik.io/v1alpha1  # Change from traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: error-pages-middleware
spec:
  errors:
    status:
      - "400-599"
    query: /{status}.html
    service:
      name: error-pages
      port: 8080
